
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(xiyou)

SET(CMAKE_DEBUG_POSTFIX "d")

IF(MSVC)
	ADD_DEFINITIONS(-D_WIN32_WINNT=0x0601)
ENDIF()

ADD_DEFINITIONS(-D_SCL_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
FIND_PACKAGE(Boost REQUIRED )

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

ADD_SUBDIRECTORY(lua)
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(prpc_gen)
ADD_SUBDIRECTORY(logic)
