
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/json)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lua)


FILE(GLOB_RECURSE HEADER "*.h")
FILE(GLOB_RECURSE SOURCE "*.cc")

SOURCE_GROUP(Header FILES ${HEADER})
SOURCE_GROUP(Source FILES ${SOURCE})

ADD_LIBRARY(common STATIC ${HEADER} ${SOURCE})
