INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lua)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/common)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/prpc_gen)

FILE(GLOB_RECURSE HEADER "*.h")
FILE(GLOB_RECURSE SOURCE "*.cc")

SOURCE_GROUP(Header FILES ${HEADER})
SOURCE_GROUP(Source FILES ${SOURCE})
 
ADD_EXECUTABLE(logic ${YACC} ${HEADER} ${SOURCE})
TARGET_LINK_LIBRARIES(logic lua)
TARGET_LINK_LIBRARIES(logic common)
TARGET_LINK_LIBRARIES(logic prpc_gen)
TARGET_LINK_LIBRARIES(logic ${Boost_LIBRARIES})

INSTALL(TARGETS logic DESTINATION bin)