INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common)

SET(INC
	prpc.gen.h
)
	
SET(SRC
	prpc.gen.cc
)

SOURCE_GROUP(Header FILES ${INC})
SOURCE_GROUP(Source FILES ${SRC})

ADD_LIBRARY(prpc_gen STATIC ${INC} ${SRC})



