INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common)

SET(INC
	prpc.gen.h
)
	
SET(SRC
	prpc.gen.cc
)

FILE(GLOB_RECURSE INL "*.inl")


SOURCE_GROUP(Header FILES ${INC})
SOURCE_GROUP(Source FILES ${SRC})
SOURCE_GROUP(Inline FILES ${INL})
ADD_LIBRARY(prpc_gen STATIC ${INC} ${SRC} ${INL} )



